--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -297,42 +297,12 @@ button:hover, .button:hover {
 }
 
 /* line 206, ../sass/_global.scss */
-.profile-card {
-  background: #999;
-  color: #153f60;
-  width: 47%;
-  margin-right: 3%;
-}
-/* line 213, ../sass/_global.scss */
-.profile-card img {
-  float: left;
-  width: 50%;
-}
-/* line 218, ../sass/_global.scss */
-.profile-card dl {
-  text-align: center;
-  padding-top: 2em;
-}
-/* line 223, ../sass/_global.scss */
-.profile-card .position {
-  text-transform: uppercase;
-  font-weight: bold;
-}
-/* line 228, ../sass/_global.scss */
-.profile-card .name {
-  border-bottom: 1px dashed #153f60;
-  display: inline-block;
-  padding-bottom: .5em;
-  margin-bottom: .5em;
-}
-
-/* line 237, ../sass/_global.scss */
 .profile-text {
   padding-left: 50%;
   width: 50%;
 }
 
-/* line 242, ../sass/_global.scss */
+/* line 211, ../sass/_global.scss */
 .profile-stack {
   float: left;
   color: #153f60;
@@ -340,21 +310,21 @@ button:hover, .button:hover {
   margin-right: 3%;
   margin-bottom: 3%;
 }
-/* line 249, ../sass/_global.scss */
+/* line 218, ../sass/_global.scss */
 .profile-stack img {
   width: 100%;
 }
-/* line 253, ../sass/_global.scss */
+/* line 222, ../sass/_global.scss */
 .profile-stack dl {
   text-align: center;
 }
-/* line 257, ../sass/_global.scss */
+/* line 226, ../sass/_global.scss */
 .profile-stack .position {
   text-transform: uppercase;
   font-weight: bold;
   margin-top: 1em;
 }
-/* line 263, ../sass/_global.scss */
+/* line 232, ../sass/_global.scss */
 .profile-stack .name {
   border-bottom: 1px dashed #153f60;
   display: inline-block;
@@ -363,41 +333,42 @@ button:hover, .button:hover {
 }
 
 @media screen and (max-width: 1250px) {
-  /* line 273, ../sass/_global.scss */
+  /* line 242, ../sass/_global.scss */
   .sub-nav {
     width: 100%;
     position: static;
   }
-  /* line 277, ../sass/_global.scss */
+  /* line 246, ../sass/_global.scss */
   .sub-nav ul li {
     display: inline-block;
     width: 15%;
   }
-  /* line 282, ../sass/_global.scss */
+  /* line 251, ../sass/_global.scss */
   .sub-nav .button {
     display: inline-block;
     width: 25%;
   }
 }
-/* line 288, ../sass/_global.scss */
+/* line 257, ../sass/_global.scss */
 .profile_card {
   max-width: 200px;
+  margin: 0 auto;
 }
-/* line 291, ../sass/_global.scss */
+/* line 261, ../sass/_global.scss */
 .profile_card img {
   width: 100%;
   margin-bottom: 1em;
 }
-/* line 296, ../sass/_global.scss */
+/* line 266, ../sass/_global.scss */
 .profile_card dl {
   text-align: center;
 }
-/* line 299, ../sass/_global.scss */
+/* line 269, ../sass/_global.scss */
 .profile_card dl .title {
   font-weight: bold;
   text-transform: uppercase;
 }
-/* line 300, ../sass/_global.scss */
+/* line 270, ../sass/_global.scss */
 .profile_card dl .name {
   border-bottom: 1px dashed;
   padding-bottom: 1em;
